[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Characters/Diggo/DiggosAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Maps/HouseInside1/BallOfReality.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Scenes/Levels/Mountains1/DiggosMasterHouse.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterSofa.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterFrame.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterCup.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Utils/Dialogs/diggosOwnerDialogBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Global/RichTextEffects/SleepRTL.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Maps/HouseInside1/MountainFrame.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Characters/DiggosOwner/DiggosOwnerAnim.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Utils/Dialogs/DialogManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterSupportItem.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterFloor.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterWall.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Maps/HouseInside1/DiggosMasterChimney.png" type="Texture" id=15]

[sub_resource type="RichTextEffect" id=1]
script = ExtResource( 8 )

[node name="DiggoIntro" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1023.69, 0 )
current = true

[node name="WallParallaxBackground" type="ParallaxBackground" parent="."]

[node name="WallParallaxLayer" type="ParallaxLayer" parent="WallParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="WallSprite" type="Sprite" parent="WallParallaxBackground/WallParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="MountainFrame" type="Sprite" parent="."]
position = Vector2( 518.835, -74.5911 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 512.703, 310.876 )
scale = Vector2( 2, 1 )
texture = ExtResource( 13 )

[node name="DiggosMasterSupportItem" type="Sprite" parent="."]
position = Vector2( 1032.79, -55.8518 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 12 )

[node name="DiggosMasterCup" type="Sprite" parent="DiggosMasterSupportItem"]
position = Vector2( -32.7993, -14.5001 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="BallOfReality" type="Sprite" parent="DiggosMasterSupportItem"]
position = Vector2( -2.45255, -10.578 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="DiggosMasterFrame" type="Sprite" parent="DiggosMasterSupportItem"]
position = Vector2( 28.7608, -12.9913 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="DiggosMasterChimney" type="Sprite" parent="."]
position = Vector2( 1412.59, -54.0001 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 15 )

[node name="SleepTextLabel" type="RichTextLabel" parent="."]
margin_left = 920.957
margin_top = 174.005
margin_right = 965.957
margin_bottom = 233.005
bbcode_enabled = true
bbcode_text = "[sleep]Z
Z
Z[/sleep]"
text = "Z
Z
Z"
custom_effects = [ SubResource( 1 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiggosAnimations" parent="." instance=ExtResource( 1 )]
position = Vector2( 1011.24, 274.438 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="DiggosMasterAnim" parent="." instance=ExtResource( 10 )]
position = Vector2( 680.068, 209.924 )

[node name="diggosOwnerDialogBox" parent="DiggosMasterAnim" instance=ExtResource( 7 )]
margin_left = -92.4999
margin_top = -336.964
margin_right = 107.5
margin_bottom = -186.964

[node name="Sofa" type="Sprite" parent="."]
position = Vector2( 650.036, 177.67 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="FirstDialog" parent="." instance=ExtResource( 11 )]
DIALOGS = [ null, null, null, null, null ]

[node name="SecondDialog" parent="." instance=ExtResource( 11 )]
DIALOGS = [ null ]
[connection signal="dialogs_done" from="FirstDialog" to="." method="_on_FirstDialog_dialogs_done"]
[connection signal="dialogs_done" from="SecondDialog" to="." method="_on_SecondDialog_dialogs_done"]
